= Version history =
x.x:

- fixed: problem with object notifications
- changed: setting page_owner on reply and thread page in case of group

2.0 (2012-04-10):

- changed: updated for Elgg 1.8

1.2 (2011-12-05):

- added: group tool option to disable The Wire on a group
- changed: moved changelog to CHANGES.txt in preparation for Elgg 1.8
- changed: moved features and todo to README.txt in preparation for Elgg 1.8

1.1.1 (2011-09-16):

- fixed: potential multiple loading of autocomplete js
- fixed: user autocomplete showed friends of all sites instead of this site (only in multi site setup)
- fixed: coding error in widgets views
- fixed: access pulldown layout error in widgets

1.1 (2011-08-17):

- added: filtering to index, group and default wire widget
- changed: add form submit button

1.0:

- initial version